--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body{
     margin: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 section{
     height: 600px;
-    padding-bottom: 200px;
+    padding-bottom: 150px;
 }
 .top-banner{
     background-image: url("images/top-banner.png");
@@ -20,7 +20,11 @@ h1{
     font-size: 60px;
     padding-top: 20%;
 }
-h1 span{
+h2{
+    font-size: 40px;
+    color: #707070;
+}
+.orange{
     color: orange;
 }
 .half-width img{
@@ -38,37 +42,66 @@ p{
     font-size: 20px;
     color: #828282;
     margin-bottom: 10%;
+    line-height: 30px;
 }
 .dream-area{
     background-image: url("images/shapes/7.png");
     background-repeat: no-repeat;
     background-size: contain;
 }
-h2{
-    font-size: 40px;
-    color: #707070;
+.dream-area h2{
+    margin-top: 25%;
 }
-.experience-area{
-    background-image: url("images/exp-bg.png");
-    background-repeat: no-repeat;
-    background-position: left;
+.recipie{
+    height: auto;
+    padding: 0%;
 }
-.experience-area h3{
-    color: orange;
+.recipie-header{
+    height: 10%;
+    text-align: center;
+    width: 50%;
+    display: block;
+    margin: 50px auto;
 }
-
-.experience-area div{
-    box-shadow: 5px 7px 40px gray;
-    height: 80%;
+h3{
+    font-size: 30px;
+    color: black;
 }
 #full-stack{
-    border-left: 7px solid tomato;
+    box-shadow: 10px 10px 40px grey;
+    border-radius: 30px;
+    padding: 25px;
 }
-#baby-web{
-    border-left: 7px solid;
-    border-image: linear-gradient(blue 100%, cyan 100%);
-    border-image-slice: 1;
+.followers_main{
+    height: 400px;
+    padding-bottom: 0;
+}
+.followers{
+    display: inline-block;
+    text-align: center;
+    width: 75%;
+    box-shadow: 10px 10px 40px grey;
+    padding: 30px;
+    border-radius: 30px;
+    position: relative;
+    margin: 50px 150px;
+}
+.follows_1{
+    width: 32%;
+    float: left;
+    position: relative;
+}
+footer{
+    background-color: black;
+    text-align: center;
+    padding: 10px;
+    height: 200px;
+}
+footer h2{
+    font-size: 30px;
+    padding: 10px;
 }
 footer p{
-    text-align: center;
+    font-size: 16px;
+    color: whitesmoke;
 }
